pre-review changes
Signed-off-by: Michael Lobstein <michael.lobstein@gmail.com>